--- a/WsRecharge/Views/AddFund/Index.cshtml
+++ b/WsRecharge/Views/AddFund/Index.cshtml
@@ -35,7 +35,7 @@
                 </div>
             </form>
             <div class="modal-footer">
-                <button type="button" onclick="SaveEntry();" class="btn btn-primary">Submit</button>
+                <button type="button" onclick="SaveEntry();" class="btn btn-custom">Submit</button>
             </div>
         </div>
     </div>
