--- a/WsRecharge/Views/FundTransfer/Index.cshtml
+++ b/WsRecharge/Views/FundTransfer/Index.cshtml
@@ -34,7 +34,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>&nbsp;</label><br />
-                                <button type="button" onclick="SearchDetail();" class="btn btn-success">Search</button>
+                                <button type="button" onclick="SearchDetail();" class="btn btn-info">Search</button>
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                 </div>
             </form>
             <div class="modal-footer">
-                <button type="button" onclick="SaveEntry();" class="btn btn-primary">Submit</button>
+                <button type="button" onclick="SaveEntry();" class="btn btn-custom">Submit</button>
             </div>
         </div>
     </div>
