--- a/WsRecharge/Views/Home/Index.cshtml
+++ b/WsRecharge/Views/Home/Index.cshtml
@@ -113,7 +113,7 @@
     </div>
 
     <div class="col-md-12">
-        <div class="panel panel-color panel-danger">
+        <div class="panel panel-color panel-warning">
             <div class="panel-heading">
                 <h3 class="panel-title">
                     PENDING RECHARGE
