--- a/WsRecharge/Views/LedgerReport/Index.cshtml
+++ b/WsRecharge/Views/LedgerReport/Index.cshtml
@@ -36,7 +36,7 @@
                         <input type="text" class="form-control" name="search" id="search" placeholder="Search">
                     </div>
                     <div class="col-lg-2 col-md-2 form-group">
-                        <button type="button" onclick="SearchData();" class="btn btn-primary  btn m-b-5">Search</button>
+                        <button type="button" onclick="SearchData();" class="btn btn-info  btn m-b-5">Search</button>
                         <button type="button" onclick="ClearText();" class="btn btn-danger btn m-b-5">Clear</button>
                     </div>
                 </div>
