--- a/WsRecharge/Views/RechargeReport/Index.cshtml
+++ b/WsRecharge/Views/RechargeReport/Index.cshtml
@@ -43,7 +43,7 @@
                         <input type="text" class="form-control" name="search" id="search" placeholder="Search any text">
                     </div>
                     <div class="col-lg-2 col-md-2 form-group">
-                        <button type="button" onclick="SearchData();" class="btn btn-primary  btn m-b-5">Search</button>
+                        <button type="button" onclick="SearchData();" class="btn btn-info  btn m-b-5">Search</button>
                         <button type="button" onclick="ClearText();" class="btn btn-danger btn m-b-5">Clear</button>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        <table id="tblDisplay" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                        <table id="tblDisplay" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
                                     <th>REQ.DATE</th>
