--- a/WsRecharge/Views/RechargeSlab/Index.cshtml
+++ b/WsRecharge/Views/RechargeSlab/Index.cshtml
@@ -24,7 +24,7 @@
                             <input type="text" class="form-control" id="slabname" name="slabname" placeholder="Slab Name">
                         </div>
                         <div class="col-lg-2 col-md-2 form-group" id="divbtnsave" style="display:none;">
-                            <button type="button" onclick="SaveEntry();" class="btn btn-primary  btn m-b-5">Save</button>
+                            <button type="button" onclick="SaveEntry();" class="btn btn-custom  btn m-b-5">Save</button>
                             <button type="button" onclick="ClearText();" class="btn btn-danger btn m-b-5">Clear</button>
                         </div>
 
@@ -36,7 +36,7 @@
                     <input type="hidden" id="rechargeslabid2" name="rechargeslabid2" />
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
-                            <button type="button" id="divsave" style="display:none" onclick="SaveAll();" class="btn btn-primary  btn m-b-5 pull-right">Save All</button>
+                            <button type="button" id="divsave" style="display:none" onclick="SaveAll();" class="btn btn-custom  btn m-b-5 pull-right">Save All</button>
                             <table id="tblDisplay" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                                 <thead>
                                     <tr>
