--- a/WsRecharge/Views/Shared/_Layout.cshtml
+++ b/WsRecharge/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         <!-- brand -->
         <div class="logo logo2">
             <a href="javascript:void(0);" class="logo-expanded">
-                <img src="~/img/logo.png" style="width:100%; margin-top:15px;" />
+                <img src="~/img/logo.png" style="width:100%; margin-top:55px;" />
             </a>
         </div>
         <!-- / brand -->
@@ -171,7 +171,7 @@
                         <a href="#"><i class="zmdi zmdi-file-text"></i> <span class="nav-label">Reports</span><span class="menu-arrow"></span></a>
                         <ul class="list-unstyled">
                             <li class="@((ControllerName == "RechargeReport") ? "active" : "")"><a href="/RechargeReport">Recharge Report</a></li>
-                            <li class="@((ControllerName == "MoneyRemitanceReport") ? "active" : "")"><a href="/MoneyRemitanceReport">Money Remitance Report</a></li>
+                            @*<li class="@((ControllerName == "MoneyRemitanceReport") ? "active" : "")"><a href="/MoneyRemitanceReport">Money Remitance Report</a></li>*@
                             <li class="@((ControllerName == "LedgerReport") ? "active" : "")"><a href="/LedgerReport">Ledger Report</a></li>
                             <li class="@((ControllerName == "FundReport") ? "active" : "")"><a href="/FundReport">Fund Transfer Report</a></li>
                             @if (User.isInRoles("administrator"))
