--- a/WsRecharge/Views/Shared/_LoginPartial.cshtml
+++ b/WsRecharge/Views/Shared/_LoginPartial.cshtml
@@ -32,7 +32,7 @@
             <p class="text-center">
                 <strong>Contact Us</strong>
                 <br />
-                <strong>BANSIMOBI : XXXX XXXXXX</strong>
+                <strong>RECHARGE DUNIYA : XXXX XXXXXX</strong>
             </p>
             <hr />
             <p class="text-center"> Powerd By : <a href="https://www.websmithsolution.com">Websmith Solution</a></p>
