--- a/WsRecharge/Views/Account/Login.cshtml
+++ b/WsRecharge/Views/Account/Login.cshtml
@@ -37,7 +37,7 @@
         </div>
         <div class="form-group text-right">
             <div class="col-xs-12">
-                <button class="btn btn-success w-md" type="submit"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;Log In</button>
+                <button class="btn btn-custom w-md" type="submit"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;Log In</button>
             </div>
         </div>
     }
