--- a/WsRecharge/Views/ApiUser/Index.cshtml
+++ b/WsRecharge/Views/ApiUser/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-12">
         <span class="pull-right">
-            <button class="btn btn-inverse" onclick="AddApiUser();"><i class="fa fa-plus-square-o"></i>&nbsp;&nbsp;Add New Api User</button>
+            <button class="btn btn-primary" onclick="AddApiUser();"><i class="fa fa-plus-square-o"></i>&nbsp;&nbsp;Add New Api User</button>
             <button class="btn btn-inverse" type="button" onclick="RefreshMaster();"><i class="fa fa-refresh"></i></button>
         </span>
     </div>
@@ -34,7 +34,6 @@
                                     <th>SLAB NAME</th>
                                     <th>STATUS</th>
                                     <th>TWO FACTOR</th>
-
                                     <th>EDIT</th>
                                 </tr>
                             </thead>
@@ -119,7 +118,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" onclick="SaveEntry();" class="btn btn-primary">Save</button>
+                <button type="button" onclick="SaveEntry();" class="btn btn-custom">Save</button>
             </div>
         </div>
     </div>
@@ -178,7 +177,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" onclick="UpdateEntry();" class="btn btn-primary">Update</button>
+                <button type="button" onclick="UpdateEntry();" class="btn btn-custom">Update</button>
             </div>
         </div>
     </div>
