--- a/WsRecharge/Views/DMTSlabCommi/Index.cshtml
+++ b/WsRecharge/Views/DMTSlabCommi/Index.cshtml
@@ -31,7 +31,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" onclick="SaveEntry();" class="btn btn-primary">Save</button>
+                <button type="button" onclick="SaveEntry();" class="btn btn-custom">Save</button>
             </div>
         </div>
     </div>
@@ -39,7 +39,7 @@
 <div class="row">
     <div class="col-md-12">
         <span class="pull-right">
-            <button class="btn btn-inverse" type="button" onclick="AddSlab();"><i class="fa fa-plus-square-o"></i>&nbsp;Add New Slab</button>
+            <button class="btn btn-primary" type="button" onclick="AddSlab();"><i class="fa fa-plus-square-o"></i>&nbsp;Add New Slab</button>
             <button class="btn btn-inverse" type="button" onclick="RefreshMaster();"><i class="fa fa-refresh"></i></button>
         </span>
     </div>
@@ -64,7 +64,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <span class="pull-right">
-                                    <button class="btn btn-success btn-sm m-b-5" type="button" id="btnSaveCommi">SAVE ALL</button>
+                                    <button class="btn btn-custom btn-sm m-b-5" type="button" id="btnSaveCommi">SAVE ALL</button>
                                 </span>
                                 <label for="currentpassword">Manage Pricing :</label>
                                 <table id="tblprice" class="table table-bordered">
@@ -103,7 +103,7 @@
                                                 </select>
                                             </td>
                                             <td>
-                                                <button class="btn btn-success btn-sm m-b-5" type="button" id="btnadd">ADD</button>
+                                                <button class="btn btn-primary btn-sm m-b-5" type="button" id="btnadd">ADD</button>
                                             </td>
                                         </tr>
                                     </tbody>
