--- a/WsRecharge/Views/OperatorMapping/Index.cshtml
+++ b/WsRecharge/Views/OperatorMapping/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-12">
         <span class="pull-right">
-            <button class="btn btn-inverse" onclick="OperatorMapping();"><i class="fa fa-plus-square-o"></i>&nbsp;Add Operator Code Mapping</button>
+            <button class="btn btn-primary" onclick="OperatorMapping();"><i class="fa fa-plus-square-o"></i>&nbsp;Add Operator Code Mapping</button>
             <button class="btn btn-inverse" type="button" onclick="RefreshMaster();"><i class="fa fa-refresh"></i></button>
         </span>
     </div>
@@ -98,7 +98,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" onclick="SaveEntry();" class="btn btn-primary">Save</button>
+                <button type="button" onclick="SaveEntry();" class="btn btn-custom">Save</button>
             </div>
         </div>
     </div>
