--- a/WsRecharge/Views/Routing/Index.cshtml
+++ b/WsRecharge/Views/Routing/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-12">
         <span class="pull-right">
-            <button class="btn btn-inverse" onclick="AddRouting();"><i class="fa fa-plus-square-o"></i>&nbsp;Add Operator Route</button>
+            <button class="btn btn-primary" onclick="AddRouting();"><i class="fa fa-plus-square-o"></i>&nbsp;Add Operator Route</button>
             <button class="btn btn-inverse" type="button" onclick="RefreshMaster();"><i class="fa fa-refresh"></i></button>
         </span>
     </div>
@@ -165,8 +165,8 @@
                 </div>
             </form>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" onclick="SaveEntry();" class="btn btn-primary">Save</button>
+                <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+                <button type="button" onclick="SaveEntry();" class="btn btn-custom">Save</button>
             </div>
         </div>
     </div>
