--- a/WsRecharge/Views/ServiceMaster/Index.cshtml
+++ b/WsRecharge/Views/ServiceMaster/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-12">
         <span class="pull-right">
-            <button class="btn btn-inverse" onclick="AddService();"><i class="fa fa-plus-square-o"></i>&nbsp;Add Service</button>
+            <button class="btn btn-primary" onclick="AddService();"><i class="fa fa-plus-square-o"></i>&nbsp;Add Service</button>
             <button class="btn btn-inverse" type="button" onclick="RefreshMaster();"><i class="fa fa-refresh"></i></button>
         </span>
     </div>
@@ -68,7 +68,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" onclick="SaveEntry();" class="btn btn-primary">Save</button>
+                <button type="button" onclick="SaveEntry();" class="btn btn-custom">Save</button>
             </div>
         </div><!-- /.modal-content -->
     </div>
