--- a/WsRecharge/Views/Shared/_Layout.cshtml
+++ b/WsRecharge/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         <!-- brand -->
         <div class="logo logo2">
             <a href="javascript:void(0);" class="logo-expanded">
-                <img src="~/img/logo.png" style="width:100%; margin-top:55px;" />
+                <img src="~/img/logo.png" style="width:100%; margin-top:0px;" />
             </a>
         </div>
         <!-- / brand -->
@@ -250,7 +250,8 @@
         <!-- Footer Start -->
         <footer class="footer">
             <span class="pull-left"> Copyright © @DateTime.Now.Year <span style="color:#f40850;"> Websmith.</span> All rights reserved.</span>
-            <span class="pull-right" style="color:blue;">Login As : @User.GetUserRole()</span>
+            @*<span class="pull-right" style="color:#f40850;">Login As : @User.GetUserRole()</span>*@
+            <span class="badge bg-danger pull-right"><strong id="loginusername"> @User.GetUserRole()</strong></span><strong class="pull-right">Login As: </strong>
         </footer>
         <!-- Footer Ends -->
     </section>
