some problem solving

--- a/WsRecharge/Views/CircleMaster/Index.cshtml
+++ b/WsRecharge/Views/CircleMaster/Index.cshtml
@@ -78,7 +78,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="field-1" class="control-label">Circle Code :</label>
-                                <input type="text" class="form-control" id="circle_code" maxlength="200" name="circle_code" placeholder="Circle Code">
+                                <input type="text" class="form-control" id="circle_code" maxlength="3" name="circle_code" placeholder="Circle Code">
                             </div>
                         </div>
                     </div>
@@ -164,8 +164,11 @@
         function AddCircle() {
             $("#dvindexmessage").empty();
             $("#dvmessage").empty();
-            $("#circle_name").val("");
-            $("#circle_code").val("");
+            $("#countryid").val('00000000-0000-0000-0000-000000000000');
+            $('#countryid').trigger('change');
+            $("#circle_name").val('');
+            $("#circle_code").val('');
+            $("#circleid").val('');
             $('#myModal').modal('show');
         }
         function SaveEntry() {
