--- a/WsRecharge/Views/FundTransfer/Index.cshtml
+++ b/WsRecharge/Views/FundTransfer/Index.cshtml
@@ -47,8 +47,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="UserLevel">UserLevel :</label>
-                                <input class="form-control" id="UserLevel" name="UserLevel" disabled="disabled" placeholder="Mobile" readonly type="text">
+                                <label for="UserLevel">User Level :</label>
+                                <input class="form-control" id="UserLevel" name="UserLevel" disabled="disabled" placeholder="User Level" readonly type="text">
                             </div>
                         </div>
                     </div>
