--- a/WsRecharge/Views/ApiUser/Index.cshtml
+++ b/WsRecharge/Views/ApiUser/Index.cshtml
@@ -237,14 +237,14 @@
                 {
                     data: "Status", "bSearcable": true, "bSortable": true, "mRender": function (data, type, oObj) {
                         if (oObj.Status == 1) {
-                            return "<button type='button' class='btn btn-success btn-xs' onclick='StatusUpdate(&quot;" + oObj.up_id + "&quot;)'>Active</button>"
+                            return "<button type='button' class='btn btn-primary btn-xs' onclick='StatusUpdate(&quot;" + oObj.up_id + "&quot;)'>Active</button>"
                         } else { return "<button type='button' class='btn btn-danger btn-xs' onclick='StatusUpdate(&quot;" + oObj.up_id + "&quot;)'>De-Active</button>" }
                   }
                     },
                      {
                          data: "up_userid", "bSearcable": true, "bSortable": true, "mRender": function (data, type, oObj) {
                             if (oObj.TwoFactorEnabled == 1) {
-                                return "<button type='button' class='btn btn-success btn-xs' onclick='TwoFactor(&quot;" + oObj.up_userid + "&quot;)'>True</button>"
+                                return "<button type='button' class='btn btn-primary btn-xs' onclick='TwoFactor(&quot;" + oObj.up_userid + "&quot;)'>True</button>"
                             } else { return "<button type='button' class='btn btn-danger btn-xs' onclick='TwoFactor(&quot;" + oObj.up_userid + "&quot;)'>False</button>" }
                         }
                     },
