changetext box type password in change password

--- a/WsRecharge/Views/Manage/ChangePassword.cshtml
+++ b/WsRecharge/Views/Manage/ChangePassword.cshtml
@@ -17,7 +17,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="AccountTo">Current Password:</label>
-                                <input class="form-control" id="OldPassword" name="OldPassword" placeholder="Old Password" type="text">
+                                <input class="form-control" id="OldPassword" name="OldPassword" placeholder="Old Password" type="password">
                             </div>
                         </div>
                     </div>
@@ -25,7 +25,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="Mobile">New Password:</label>
-                                <input class="form-control" id="NewPassword" name="NewPassword" placeholder="New Password" type="text">
+                                <input class="form-control" id="NewPassword" name="NewPassword" placeholder="New Password" type="password">
                             </div>
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="up_fundbalance">Confirm Password:</label>
-                                <input class="form-control" id="ConfirmPassword" name="ConfirmPassword" placeholder="Confirm Password" type="text">
+                                <input class="form-control" id="ConfirmPassword" name="ConfirmPassword" placeholder="Confirm Password" type="password">
                             </div>
                         </div>
                     </div>
